; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_time.c_sys_clock_settime.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_time.c_sys_clock_settime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.clock_settime_args = type { i32, i32 }
%struct.timespec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_clock_settime(%struct.thread* %0, %struct.clock_settime_args* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.thread*, align 8
  %5 = alloca %struct.clock_settime_args*, align 8
  %6 = alloca %struct.timespec, align 4
  %7 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %4, align 8
  store %struct.clock_settime_args* %1, %struct.clock_settime_args** %5, align 8
  %8 = load %struct.clock_settime_args*, %struct.clock_settime_args** %5, align 8
  %9 = getelementptr inbounds %struct.clock_settime_args, %struct.clock_settime_args* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @copyin(i32 %10, %struct.timespec* %6, i32 4)
  store i32 %11, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %3, align 4
  br label %21

15:                                               ; preds = %2
  %16 = load %struct.thread*, %struct.thread** %4, align 8
  %17 = load %struct.clock_settime_args*, %struct.clock_settime_args** %5, align 8
  %18 = getelementptr inbounds %struct.clock_settime_args, %struct.clock_settime_args* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @kern_clock_settime(%struct.thread* %16, i32 %19, %struct.timespec* %6)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %15, %13
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @copyin(i32, %struct.timespec*, i32) #1

declare dso_local i32 @kern_clock_settime(%struct.thread*, i32, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
